[project]
name = "ai-agents-from-zero"
description = "AI 智能体实战速成指南：从零到企业级落地 - 案例与源码"
readme = "README.md"
requires-python = ">=3.10"

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.venv
  | venv
  | _build
  | __pycache__
)/
'''
